
noinst_LIBRARIES = libjson_spirit.a

libjson_spirit_a_SOURCES = \
	json_spirit_error_position.h	\
	json_spirit.h			\
	json_spirit_reader.cc		\
	json_spirit_reader.h		\
	json_spirit_reader_template.h	\
	json_spirit_stream_reader.h	\
	json_spirit_utils.h		\
	json_spirit_value.cc		\
	json_spirit_value.h		\
	json_spirit_writer.cc		\
	json_spirit_writer.h		\
	json_spirit_writer_template.h

